--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
@@ -64,7 +64,7 @@
                               </ImageView>
                            </children>
                         </StackPane>
-                        <AnchorPane layoutX="12.0" layoutY="107.0" prefHeight="446.0" prefWidth="597.0">
+                        <AnchorPane layoutX="12.0" layoutY="107.0" prefHeight="446.0" prefWidth="597.0" visible="false">
                            <children>
                               <ImageView fitHeight="431.0" fitWidth="499.0" layoutX="69.0" layoutY="-10.0">
                                  <image>
@@ -163,7 +163,7 @@
                             </children>
                         </Group>
                         <Group />
-                        <AnchorPane prefHeight="224.0" prefWidth="371.0">
+                        <AnchorPane fx:id="playerBookshelves" prefHeight="224.0" prefWidth="371.0">
                             <children>
                                 <Button layoutX="36.0" layoutY="33.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="303.0" text="NIckname'sBookshelf" textFill="WHITE">
                                     <font>
@@ -209,12 +209,7 @@
                                 </Group>
                         <AnchorPane layoutX="85.0" layoutY="178.0" prefHeight="366.0" prefWidth="349.0">
                            <children>
-                                      <ImageView fitHeight="365.0" fitWidth="350.0" pickOnBounds="true" preserveRatio="true">
-                                          <image>
-                                              <Image url="@../boards/bookshelf.png" />
-                                          </image>
-                                      </ImageView>
-                              <GridPane fx:id="bookshelf" hgap="11.0" layoutX="28.0" layoutY="16.0" prefHeight="300.0" prefWidth="300.0" vgap="10.0">
+                              <GridPane fx:id="bookshelf" hgap="15.0" layoutX="28.0" layoutY="16.0" prefHeight="300.0" prefWidth="300.0" vgap="10.0">
                                 <columnConstraints>
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -231,11 +226,16 @@
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <padding>
-                                    <Insets bottom="15.0" left="15.0" right="20.0" top="12.0" />
+                                    <Insets bottom="14.0" left="16.0" right="21.0" top="11.0" />
                                  </padding>
                               </GridPane>
+                                      <ImageView fitHeight="365.0" fitWidth="350.0" pickOnBounds="true" preserveRatio="true">
+                                          <image>
+                                              <Image url="@../boards/bookshelf.png" />
+                                          </image>
+                                      </ImageView>
                            </children></AnchorPane>
-                                <ImageView fitHeight="200.0" fitWidth="143.0" layoutX="208.0" layoutY="566.0">
+                                <ImageView fx:id="personalCard" fitHeight="200.0" fitWidth="143.0" layoutX="208.0" layoutY="566.0">
                                     <image>
                                         <Image url="@../personal%20goal%20cards/Personal_Goals3.png" />
                                     </image>
