--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/computeScore_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/computeScore_scene.fxml
@@ -5,15 +5,18 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.LivingBoardController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
          <children>
-            <ImageView fitHeight="520.0" fitWidth="538.0" layoutX="35.0" layoutY="161.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="509.0" fitWidth="518.0" layoutX="35.0" layoutY="172.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../boards/bookshelf.png" />
                </image>
@@ -131,7 +134,7 @@
             </Label>
             <ImageView fitHeight="88.0" fitWidth="151.0" layoutX="698.0" layoutY="739.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../../../../../../../../../../../var/folders/h5/wdlvmgrd6154_x67ppf4w33h0000gn/T/TemporaryItems/NSIRD_screencaptureui_a3FCb5/Screenshot%202023-05-11%20alle%2023.34.15.png" />
+                  <Image url="@../misc/screenshot.png" />
                </image>
             </ImageView>
             <ImageView fitHeight="59.0" fitWidth="50.0" layoutX="574.0" layoutY="731.0">
@@ -160,7 +163,7 @@
                   <Font name="Libian SC Regular" size="36.0" />
                </font>
             </Label>
-            <StackPane layoutX="499.0" layoutY="140.0" prefHeight="150.0" prefWidth="193.0">
+            <StackPane layoutX="508.0" layoutY="140.0" prefHeight="150.0" prefWidth="193.0">
                <children>
                   <ImageView fitHeight="69.0" fitWidth="80.0">
                      <image>
@@ -205,11 +208,25 @@
                   </ImageView>
                </children>
             </StackPane>
-            <Button layoutX="109.0" layoutY="725.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="387.0" text="See other players scores" textFill="#fcfcfc">
-               <font>
-                  <Font name="Libian SC Regular" size="36.0" />
-               </font>
-            </Button>
+            <AnchorPane layoutX="104.0" layoutY="555.0" prefHeight="44.0" prefWidth="56.0" />
+            <GridPane gridLinesVisible="true" hgap="11.1" layoutX="93.0" layoutY="210.0" prefHeight="405.0" prefWidth="396.0" vgap="11.1">
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="92.0" minWidth="10.0" prefWidth="65.1842041015625" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="123.0" minWidth="10.0" prefWidth="65.1842041015625" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="133.0" minWidth="10.0" prefWidth="65.1842041015625" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="162.0" minWidth="10.0" prefWidth="65.1842041015625" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="0.0" prefWidth="65.1842041015625" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="0.0" prefWidth="0.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="67.30703735351562" minHeight="10.0" prefHeight="65.1842041015625" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="115.9083251953125" minHeight="10.0" prefHeight="67.3157958984375" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="142.43069458007812" minHeight="10.0" prefHeight="71.503173828125" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="161.10769653320312" minHeight="10.0" prefHeight="68.84970092773438" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="151.72174072265625" minHeight="10.0" prefHeight="69.65029907226562" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="126.34542846679688" minHeight="10.0" prefHeight="65.1842041015625" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
          </children>
       </AnchorPane>
    </children>
