--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/lobby_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/lobby_scene.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Group?>
+<?import com.gluonhq.charm.glisten.control.ProgressIndicator?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -8,25 +8,37 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="rootPane" stylesheets="@../css/lobby_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
-    <children>
-        <Group scaleX="3.5" scaleY="2.5">
-            <children>
-                <AnchorPane prefHeight="200.0" prefWidth="200.0">
-                    <children>
-                        <ImageView fitHeight="174.0" fitWidth="600.0" layoutY="228.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../Publisher_material/banner%201386x400px.png" />
-                            </image>
-                        </ImageView>
-                        <Label layoutX="117.0" layoutY="45.0" prefHeight="121.0" prefWidth="486.0" text="WAITING FOR OTHER PLAYERS TO JOIN " textFill="WHITE">
-                            <font>
-                                <Font name="Libian SC Regular" size="24.0" />
-                            </font>
-                        </Label>
-                    </children>
-                </AnchorPane>
-            </children></Group>
-    </children>
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0">
+         <children>
+            <Label layoutX="644.0" layoutY="98.0" text="Waiting" textFill="#fffefe">
+               <font>
+                  <Font name="Libian SC Regular" size="72.0" />
+               </font>
+            </Label>
+            <Label layoutX="437.0" layoutY="171.0" text="for other players to join.... " textFill="WHITE">
+               <font>
+                  <Font name="Libian SC Regular" size="72.0" />
+               </font>
+            </Label>
+            <Label layoutX="330.0" layoutY="249.0" text="players currently in the lobby X/X" textFill="WHITE">
+               <font>
+                  <Font name="Libian SC Regular" size="72.0" />
+               </font>
+            </Label>
+            <ProgressIndicator layoutX="721.0" layoutY="354.0" prefHeight="10.0" prefWidth="16.0" progress="0.0" radius="40.0" />
+            <ImageView fitHeight="527.0" fitWidth="1131.0" layoutX="208.0" layoutY="-5.0">
+               <image>
+                  <Image url="@../misc/cornice-PNG.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="366.0" fitWidth="1516.0" layoutX="-7.0" layoutY="560.0">
+               <image>
+                  <Image url="@../Publisher_material/banner%201386x400px.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+   </children>
 </StackPane>
-
