--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/lobby_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/lobby_scene.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.ProgressIndicator?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
          <children>
@@ -24,11 +21,10 @@
             </Label>
             <Label layoutX="330.0" layoutY="249.0" text="players currently in the lobby X/X" textFill="WHITE">
                <font>
-                  <Font name="Libian SC Regular" size="72.0" />
+                  <Font name="Libian SC Regular" size="64.0" />
                </font>
             </Label>
-            <ProgressIndicator layoutX="721.0" layoutY="354.0" prefHeight="10.0" prefWidth="16.0" progress="0.0" radius="40.0" />
-            <ImageView fitHeight="527.0" fitWidth="1131.0" layoutX="208.0" layoutY="-5.0">
+            <ImageView fitHeight="483.0" fitWidth="1084.0" layoutX="210.0" layoutY="39.0">
                <image>
                   <Image url="@../misc/cornice-PNG.png" />
                </image>
