--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/win_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/win_scene.fxml
@@ -96,26 +96,6 @@
                         <Font name="Libian SC Regular" size="72.0" />
                     </font>
                 </Label>
-                <ImageView fx:id="fail_1" fitHeight="187.0" fitWidth="280.0" layoutX="121.0" layoutY="478.0">
-                    <image>
-                        <Image url="@../misc/1-2-fail-stamp-picture.png" />
-                    </image>
-                </ImageView>
-                <ImageView fx:id="fail_4" fitHeight="187.0" fitWidth="280.0" layoutX="1034.0" layoutY="478.0">
-                    <image>
-                        <Image url="@../misc/1-2-fail-stamp-picture.png" />
-                    </image>
-                </ImageView>
-                <ImageView fx:id="fail_2" fitHeight="187.0" fitWidth="280.0" layoutX="425.0" layoutY="390.0">
-                    <image>
-                        <Image url="@../misc/1-2-fail-stamp-picture.png" />
-                    </image>
-                </ImageView>
-                <ImageView fx:id="fail_3" fitHeight="187.0" fitWidth="280.0" layoutX="741.0" layoutY="390.0">
-                    <image>
-                        <Image url="@../misc/1-2-fail-stamp-picture.png" />
-                    </image>
-                </ImageView>
                 <Label fx:id="sorry" layoutX="600.0" layoutY="583.0" prefHeight="107.0" prefWidth="680.0" text="Sorry...you lost! ">
                     <font>
                         <Font name="Libian SC Regular" size="48.0" />
@@ -131,6 +111,26 @@
                         <Font name="Libian SC Regular" size="72.0" />
                     </font>
                 </Label>
+            <ImageView fitHeight="128.0" fitWidth="200.0" layoutX="1083.0" layoutY="513.0">
+               <image>
+                  <Image url="@../misc/575fcbe20f3561554e346b0e.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="128.0" fitWidth="200.0" layoutX="784.0" layoutY="408.0">
+               <image>
+                  <Image url="@../misc/575fcbe20f3561554e346b0e.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="128.0" fitWidth="200.0" layoutX="467.0" layoutY="408.0">
+               <image>
+                  <Image url="@../misc/575fcbe20f3561554e346b0e.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="128.0" fitWidth="200.0" layoutX="157.0" layoutY="502.0">
+               <image>
+                  <Image url="@../misc/575fcbe20f3561554e346b0e.png" />
+               </image>
+            </ImageView>
             </children>
         </AnchorPane>
     </children>
