--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/FirstPlayer_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/FirstPlayer_scene.fxml
@@ -1,81 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Group?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.text.Font?>
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
-    <children>
-            <Group scaleX="2.45" scaleY="1.9">
-                <children>
-                    <AnchorPane fx:id="PaneforParquet" prefHeight="490.0" prefWidth="623.0" styleClass="rootPane" stylesheets="@../css/server_scene.css">
-                        <children>
-                            <ImageView fitHeight="165.0" fitWidth="173.0" layoutX="1.0" layoutY="367.0" pickOnBounds="true" preserveRatio="true">
-                                <image>
-                                    <Image url="@../itemtiles/Piante1.2.png" />
-                                </image>
-                            </ImageView>
-                            <ImageView fitHeight="165.0" fitWidth="174.0" layoutX="165.0" layoutY="367.0" pickOnBounds="true" preserveRatio="true">
-                                <image>
-                                    <Image url="@../itemtiles/Gatti1.1.png" />
-                                </image>
-                            </ImageView>
-                            <ImageView fitHeight="165.0" fitWidth="294.0" layoutX="329.0" layoutY="366.0">
-                                <image>
-                                    <Image url="@../itemtiles/Libri1.2.png" />
-                                </image>
-                            </ImageView>
-                            <ImageView fitHeight="146.0" fitWidth="173.0" layoutX="207.0" pickOnBounds="true" preserveRatio="true" />
-                            <ImageView fitHeight="183.0" fitWidth="197.0" layoutX="258.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
-                                <image>
-                                    <Image url="@../itemtiles/Giochi1.1.png" />
-                                </image>
-                            </ImageView>
-                            <ImageView fitHeight="184.0" fitWidth="183.0" layoutX="440.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
-                                <image>
-                                    <Image url="@../itemtiles/Cornici1.3.png" />
-                                </image>
-                            </ImageView>
-                            <ImageView fitHeight="183.0" fitWidth="266.0" layoutX="-1.0" layoutY="-4.0">
-                                <image>
-                                    <Image url="@../itemtiles/Trofei1.1.png" />
-                                </image>
-                            </ImageView>
-                            <TextField layoutX="233.0" layoutY="304.0" styleClass="rounded-input" stylesheets="@../css/server_scene.css" />
-                            <Label layoutX="186.0" layoutY="162.0" prefHeight="68.0" prefWidth="309.0" text="choose the number of players:" textFill="WHITE">
-                                <font>
-                                    <Font name="Libian SC Regular" size="24.0" />
-                                </font>
-                            </Label>
-                            <Label layoutX="186.0" layoutY="262.0" text="choose the name of the game:" textFill="WHITE">
-                                <font>
-                                    <Font name="Libian SC Regular" size="24.0" />
-                                </font>
-                            </Label>
-                  <RadioButton layoutX="203.0" layoutY="205.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="12.0" text="2">
-                     <font>
-                        <Font name="Libian SC Regular" size="18.0" />
-                     </font>
-                  </RadioButton>
-                  <RadioButton layoutX="292.0" layoutY="205.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="12.0" text="3">
-                     <font>
-                        <Font name="Libian SC Regular" size="18.0" />
-                     </font>
-                  </RadioButton>
-                  <RadioButton layoutX="385.0" layoutY="207.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="12.0" text="4">
-                     <font>
-                        <Font name="Libian SC Regular" size="18.0" />
-                     </font>
-                  </RadioButton>
-                        </children>
-                    </AnchorPane>
-                </children>
-            </Group>
-    </children>
-</StackPane>
+<AnchorPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="$CONTROLLER_NAME$"
+            prefHeight="400.0" prefWidth="600.0" >
+
+</AnchorPane>
